update configs and storage files

--- a/storage/ajack_settings.json
+++ b/storage/ajack_settings.json
@@ -19299,5 +19299,49 @@
     "gachaButtonLabel": "🎰 ガチャ",
     "gachaDescription": "運試しガチャ！",
     "gachaPools": []
+  },
+  "<@1397134657744797768> <@1444234268426371085> <@1442421972456964156>": {
+    "workRewardMin": 50,
+    "workRewardMax": 150,
+    "workCooldown": 1800000,
+    "enableLegacyCommands": false,
+    "purchaseRoleId": null,
+    "rolePrice": 100000,
+    "chatRewardEnabled": true,
+    "chatRewardMin": 1,
+    "chatRewardMax": 5,
+    "chatRewardCooldown": 60000,
+    "stealSuccessRate": 50,
+    "stealPercentage": 10,
+    "stealFailurePenalty": 100,
+    "stealCooldown": 3600000,
+    "dailyBonus": 100,
+    "gachaEnabled": true,
+    "gachaPrice": 500,
+    "gachaButtonLabel": "🎰 ガチャ",
+    "gachaDescription": "運試しガチャ！",
+    "gachaPools": []
+  },
+  "いる？": {
+    "workRewardMin": 50,
+    "workRewardMax": 150,
+    "workCooldown": 1800000,
+    "enableLegacyCommands": false,
+    "purchaseRoleId": null,
+    "rolePrice": 100000,
+    "chatRewardEnabled": true,
+    "chatRewardMin": 1,
+    "chatRewardMax": 5,
+    "chatRewardCooldown": 60000,
+    "stealSuccessRate": 50,
+    "stealPercentage": 10,
+    "stealFailurePenalty": 100,
+    "stealCooldown": 3600000,
+    "dailyBonus": 100,
+    "gachaEnabled": true,
+    "gachaPrice": 500,
+    "gachaButtonLabel": "🎰 ガチャ",
+    "gachaDescription": "運試しガチャ！",
+    "gachaPools": []
   }
 }
